--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NAME = \"freek linssen, #2014267#\" u471688\n"
+    "NAME = \"Freek Linssen, #2014267#\" u471688\n"
    ]
   },
   {
